2007-02-19  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin.c (gimp_plug_in_add_temp_proc)
	* app/plug-in/gimpplugindef.c (gimp_plug_in_def_add_procedure):
	remove duplicate procedures before adding the new one.
	
	* app/plug-in/gimpplugin-message.c
	(gimp_plug_in_handle_proc_install): don't remove duplicates here.

2007-02-19  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-types.h
	* app/plug-in/plug-in-def.[ch]: removed...

	* app/plug-in/gimpplugindef.[ch]: ...and added as object. Merged
	locale and help domain setters into one function each.

	* app/plug-in/gimpplugin-message.c
	* app/plug-in/gimpplugin.[ch]
	* app/plug-in/gimppluginmanager-call.[ch]
	* app/plug-in/gimppluginmanager-file.c
	* app/plug-in/gimppluginmanager.c
	* app/plug-in/plug-in-rc.c
	* tools/pdbgen/pdb/plug_in.pdb: changed accordingly.

	* app/pdb/plug_in_cmds.c: regenerated.

2007-02-18  Michael Natterer  <mitch@gimp.org>

	* app/text/gimptext-parasite.c
	* plug-ins/flame/libifs.c: use g_strtod() instead of atof()
	because these files have to parse strings that never had a clearly
	specified format.

	* plug-ins/script-fu/tinyscheme/scheme.c (bug #409091)
	* plug-ins/imagemap/imap_cern.l
	* plug-ins/imagemap/imap_csim.l
	* plug-ins/imagemap/imap_csim.y
	* plug-ins/imagemap/imap_ncsa.l: use g_ascii_strtod() instead of
	atof() because scheme code and imagemap files with wrong decimal
	separators are clearly broken and should be rejected.

	* plug-ins/imagemap/imap_cern_lex.c
	* plug-ins/imagemap/imap_csim_lex.c
	* plug-ins/imagemap/imap_csim_parse.c
	* plug-ins/imagemap/imap_ncsa_lex.c: regenerated.

	* plug-ins/common/sample_colorize.c: round numbers using sane code
	instead of sprintf() and atod().

	* plug-ins/Lighting/lighting_ui.c: removed some dead code.

2007-02-18  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-commands.c (edit_copy_cmd_callback): show an
	informational message in the statusbar. There is otherwise no