@@ -1,3 +1,9 @@
+2007-02-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c
+	* plug-ins/script-fu/scheme-wrapper.c: use g_printerr() instead of
+	fprintf().
+
 2007-02-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/gimpplugin.c (gimp_plug_in_add_temp_proc)
